# idfixeval

./: .gitignore  CMakeLists.txt  README.md  cmake_debug.sh  cmake_release.sh
docs/: idfixeval_doc.doxygen
include/graph/: graph.hpp  nodeGraph.hpp
include/graph/dfg/: nodeConstant.hpp  nodeDFG.hpp  nodeData.hpp  nodeOperator.hpp
include/graph/gfd/: nodeGFD.hpp
include/utils/: graph.hpp  tools.hpp
src/: main.cpp
src/graph/dfg/: nodeData.cpp  nodeOperator.cpp
src/utils/: tools.cpp
